# telegras

./: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
alembic/: env.py
alembic/versions/: 0001_create_telegras_schema.py  20260303_000001_init_telegras.py
docker/: Dockerfile  docker-compose.yml
docs/: CNAME  api-available-types.html  api-telegram-passport.html  available_methods_models.py  available_types_models.py  fix_compound_types.py  fix_forward_references.py  fix_forward_references_v2.py  generate_pydantic_models.py  getting-started.md  handler-plugin-system.md  index.md  stickers_models.py  telegram-api-extraction.md  telegram_passport_models.py  webhook-attachments.md
docs/api/: index.md
docs/available-methods/: approvechatjoinrequest.json  banchatsenderchat.json  closeforumtopic.json  convertgifttostars.json  copymessage.json  copymessages.json  createforumtopic.json  declinechatjoinrequest.json  deletechatphoto.json  deletechatstickerset.json  deletemycommands.json  deletestory.json  editchatinvitelink.json  editgeneralforumtopic.json  exportchatinvitelink.json  formatting_options.json  getbusinessaccountgifts.json  getbusinessaccountstarbalance.json  getchatadministrators.json  getchatmembercount.json  getchatmenubutton.json  getfile.json  getme.json  getmycommands.json  getmyname.json  getmyshortdescription.json  getusergifts.json  getuserprofileaudios.json  hidegeneralforumtopic.json  leavechat.json  poststory.json  promotechatmember.json  removebusinessaccountprofilephoto.json  removechatverification.json  removemyprofilephoto.json  removeuserverification.json  reopenforumtopic.json  repoststory.json  restrictchatmember.json  sendanimation.json  (+29 more)
docs/available-types/: backgroundfillfreeformgradient.json  backgroundfillgradient.json  backgroundfillsolid.json  backgroundtype.json  backgroundtypepattern.json  botcommand.json  botcommandscopeallchatadministrators.json  botcommandscopeallprivatechats.json  botcommandscopechat.json  botdescription.json  botname.json  botshortdescription.json  businessbotrights.json  businessconnection.json  businessintro.json  businessopeninghours.json  callbackquery.json  chatadministratorrights.json  chatbackground.json  chatboost.json  chatboostadded.json  chatboostsourcegiftcode.json  chatboostsourcegiveaway.json  chatboostsourcepremium.json  chatfullinfo.json  dice.json  (+78 more)
telegram-api-extract/: api-available-methods.html  api-games.html  api-getting-updates.html  api-inline-mode.html  api-payments.html  api-stickers.html  api-updating-messages.html  api.html  games_models.py  getting-started.md  getting_updates_models.py  inline_mode_models.py  payments_models.py  telegram_api_review.md  updating_messages_models.py
telegras/: __init__.py  app.py  cli.py  contracts.py  default_handlers.py  display.py  handler_registry.py  logging_utils.py  matchers.py  message_parser.py  parsers.py  schemas.py  settings.py  start.py  startup.py  telegram_api.py  update_model.py  webhook_attachments.py
tests/: conftest.py  test_app.py  test_bot_mode.py  test_cli.py  test_display.py  test_introspection_api.py  test_logging_utils.py  test_message_parser.py  test_schemas.py  test_settings.py  test_startup.py  test_telegram_api.py  test_telegras_backends.py  test_telegras_chat_endpoints.py  test_telegras_cli.py  test_telegras_migrations.py  test_webhook_attachments.py
tg_api_parsed/: __init__.py  getting_updates.py  stickers.py
(+349 files in other folders)
