[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegras"
version = "1.0.0"
description = "Telegram + FastAPI ingestion core with pluggable publication backends"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "cbadger", email = "" }
]
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.30",
  "aiosqlite>=0.20.0",
  "click>=8.0.0",
  "alembic>=1.13.2",
]

[project.scripts]
telegras = "telegras.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.1.6",
  "black>=23.0.0",
  "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["telegras"]

[tool.hatch.envs.default.scripts]
start = "uvicorn telegras.app:app --reload"
test = "pytest"
cov = "pytest --cov=telegras"
lint = "ruff check telegras tests"
format = "ruff format telegras tests"
typecheck = "mypy telegras"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "black", "mypy"]
